Fixed book card alignments and overflow
-added elipses when title or author is too long
-increased book card width for better viewing

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ div.books-container {
   grid-row: 2/3;
   grid-column: 1/2;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 150px);
+  grid-template-columns: repeat(auto-fit, 200px);
   grid-template-rows: repeat(auto-fit, 110px);
   grid-auto-columns: auto;
   grid-auto-rows: auto;
@@ -39,7 +39,7 @@ div.books-container {
 div.book-card {
   justify-items: center;
   align-items: center;
-  width: 140px;
+  width: 190px;
   height: 100px;
   background-color: rgba(197, 144, 51, 0.512);
   border-radius: 5px;
@@ -168,5 +168,15 @@ button.add-book-button {
 
 .add-book-form > form > .close-modal-button:hover {
   background-color: #ff0000;
+}
+
+.book-title,
+.book-author {
+  text-align: center;
+  width: 170px;
+  height: auto;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
